2001-08-06  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm (real_install): Added check to catch endless loops
	caused by circular dependencies.

2001-07-30  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: Provide the full path to the build directory in
	the expansion %b.

2001-07-22  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: Added new package type 'nosource'.

2001-07-21  Christoph Pfisterer  <cp@chrisp.de>

	* Bootstrap.pm (bootstrap): Create empty 'diversions' file for
	dpkg-divert during bootstrap.

	* Engine.pm: Added 'desc' and 'info' as aliases for the
	'description' command. Suggested by Max Horn.

2001-07-13  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (get_description): Added optional style
	parameter.

	* Package.pm: Make sure the PkgVersion.pm module is loaded.

	* PkgVersion.pm (phase_build): Added support to automatically
	install / remove Info documents.

2001-07-07  Christoph Pfisterer  <cp@chrisp.de>

	* Services.pm (read_properties): Ignore trailing white space.
	(read_properties_multival): Likewise.

	* Engine.pm: Added commands for a human-readable (list) and a
	machine-readable (listpackages) package listing.

	* PkgVersion.pm: Added method get_shortdescription to get just the
	one line description.

2001-07-05  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm (real_install): Optionally print list of requested
	packages that will actually be installed/built/whatever.
	(cmd_update_all): Always show the list described above.

	* Configure.pm (configure): Added proxy and firewall
	settings. Cosmetic output formatting changes.
	(choose_mirrors): Remember continent and country in the config
	file. Offer the current settings as default values.
	* PkgVersion.pm (fetch_source): Support new proxy and firewall
	settings.

	* Config.pm (set_param): Handle empty values.
	(save): Remove keys that are set to empty values from the file.

2001-06-30  Christoph Pfisterer  <cp@chrisp.de>
